# logger

./: .env.template  Cargo.toml  build.rs
protobuffs/logger-service/: logger-service.proto
src/: main.rs
src/config/: config.rs
src/database/: database.rs  helper.rs  mod.rs  model.rs
